<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@mipmap/bg"
    tools:context="com.example.goodman.app.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:windowSoftInputMode="stateVisible|adjustResize">

        <ImageView
            android:id="@+id/budget_logo"
            android:src="@mipmap/ic_launcher_round"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_width="70dp"
            android:layout_height="70dp" />



        <RelativeLayout
            android:id="@+id/login_container"
            android:layout_below="@id/budget_logo"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/email_password_container"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.design.widget.TextInputLayout
                    android:layout_margin="8dp"
                    android:textColorHint="@color/silver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:backgroundTint="@color/white_colour"
                        android:textCursorDrawable="@null"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:textColorHint="@color/silver"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:backgroundTint="@color/white_colour"
                        android:textCursorDrawable="@null"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>



            <Button
                android:id="@+id/login_button"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/silver"
                android:layout_below="@+id/email_password_container"
                android:background="@color/colorPrimaryDark"
                android:text="@string/login"/>

        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/forgot_password_and_sign_up_container"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@color/silver"
            android:textSize="14sp"
            android:text="@string/sign_up"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/silver"
            android:textSize="14sp"
            android:text="@string/forgot_password"/>

    </RelativeLayout>




</RelativeLayout>