<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:id="@+id/sign_up_container"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:background="@drawable/rectangle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_margin="15dp"
            android:textColorHint="@color/silver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/name_and_surname"
            android:hint="Name &amp; Surname"
            android:backgroundTint="@color/white_colour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_margin="15dp"
            android:textColorHint="@color/silver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/white_colour"
                android:textCursorDrawable="@null"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/silver"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:backgroundTint="@color/white_colour"
                android:textCursorDrawable="@null"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/silver"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:imeActionId="6"
                android:backgroundTint="@color/white_colour"
                android:textCursorDrawable="@null"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@id/sign_up_container"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/sign_up_button"
                android:layout_margin="25dp"
                android:text="Sign up"
                android:layout_alignParentEnd="true"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/silver"
                android:layout_width="150dp"
                android:layout_height="50dp" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>